[package]
name = "libtypst-c"
version = "0.1.0"
edition = "2024"

[lib]
name = "typst_c"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
typst = "0.14.2"
typst-pdf = "0.14.2"
typst-kit = "0.14.2"
chrono = "0.4.44"
parking_lot = "0.12"
tar = "0.4.44"
flate2 = "1.1.9"
dirs = "6.0.0"


[dev-dependencies]
dirs = "6.0.0"
tempfile = "3.8"

[build-dependencies]
cbindgen = "0.29.2"

[profile.release]
# 最大化优化二进制大小
opt-level = "z"     # 优化大小而非速度
codegen-units = 1   # 更好的优化，但编译更慢
panic = "abort"     # 不生成 panic 展开代码
strip = true        # 自动去除符号
overflow-checks = false # 去掉溢出检查
debug = 0           # 不生成调试符号


